--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                 <div class="blog-item flex-column d-flex justify-content-center">
                     <h4>13 of My Favorite</h4>
                     <h4>UI/UX Goodies</h4>
-                    <p>By<span>Danny Sapio</span></p>
+                    <p>By<span> Danny Sapio</span></p>
                 </div>
             </div>
             <div class="col-md-6 blog d-flex">
                 <img src="image/blog/blog2.png" alt="">
-                <div class="blog-item">
+                <div class="blog-item flex-column d-flex justify-content-center">
                     <h4>UI cheat sheet: </h4>
                     <h4>list vs grids</h4>
                     <p>By<span> Tess Gadd</span></p>
@@ -121,7 +121,20 @@
                         <p class="card-text">Reed Krakoff.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="row d-flex justify-content-between">
+                            <div class="div1 col-md-6">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/blank-star.png" alt="">
+                                <span>4.5</span>
+                            </div>
+                            <div class="div2 col-md-6">
+                                <img src="icon/time.png" alt="">
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -134,7 +147,20 @@
                         <p class="card-text">Walter Scott.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="row d-flex justify-content-between">
+                            <div class="div1 col-md-6">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/blank-star.png" alt="">
+                                <span>4.3</span>
+                            </div>
+                            <div class="div2 col-md-6">
+                                <img src="icon/time.png" alt="">
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -147,7 +173,20 @@
                         <p class="card-text">Reed Krakoff.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="row d-flex justify-content-between">
+                            <div class="div1 col-md-6">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/star.png" alt="">
+                                <img src="icon/blank-star.png" alt="">
+                                <span>4.5</span>
+                            </div>
+                            <div class="div2 col-md-6">
+                                <img src="icon/time.png" alt="">
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
