--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg nav-des">
+    <nav class="navbar navbar-expand-lg nav-des navbar-dark">
         <div class="container-xxl">
             <a class="navbar-brand" href="#"><img src="icon/icon.png" alt=""><span>Idea</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
