--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav align-items-center">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav align-items-center ms-auto">
                     <li class="nav-item navi">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -32,7 +32,7 @@
                     <li class="nav-item navi">
                         <a class="nav-link" href="#">Works</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item navi">
                         <a class="nav-link" href="#"><img src="icon/Ellipse.png" alt=""></a>
                     </li>
                 </ul>
@@ -73,46 +73,86 @@
         </section>
         <div class="line"></div>
         <h3 class="title">Top Blog</h3>
-        <div class="row blog">
-            <div class="col-md-6 blog d-flex ">
-                <img src="image/blog/blog1.png" alt="">
-                <div class="blog-item flex-column d-flex justify-content-center">
-                    <h4>13 of My Favorite</h4>
-                    <h4>UI/UX Goodies</h4>
-                    <p>By<span> Danny Sapio</span></p>
+        <div class="row">
+            <div class="col-md-6 "> 
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-6">
+                         <img class="card-img" src="image/blog/blog1.png" alt="">
+                      </div>
+                      <div class="col-md-6 p-3 blog-item">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                          <h5 class="card-title">13 of My Favorite</h5>
+                          <h5 class="card-title">UI/UX Goodies</h5>
+                          <small class="card-text">By<span> Danny Sapio</span></small>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 blog d-flex">
-                <img src="image/blog/blog2.png" alt="">
-                <div class="blog-item flex-column d-flex justify-content-center">
-                    <h4>UI cheat sheet: </h4>
-                    <h4>list vs grids</h4>
-                    <p>By<span> Tess Gadd</span></p>
+
+            <div class="col-md-6 "> 
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-6">
+                        <img class="card-img" src="image/blog/blog2.png" alt="">
+                      </div>
+                      <div class="col-md-6 p-3 blog-item">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                          <h5 class="card-title">UI cheat sheet:</h5>
+                          <h5 class="card-title">list vs grids</h5>
+                          <small class="card-text">By<span> Tess Gadd</span></small>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 blog d-flex">
-                <img src="image/blog/blog3.png" alt="">
-                <div class="blog-item flex-column d-flex justify-content-center">
-                    <h4>7 typography tips </h4>
-                    <h4>for interface design</h4>
-                    <p>By<span> Jeremiah Lam</span></p>
+
+            <div class="col-md-6 "> 
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-6">
+                        <img class="card-img" src="image/blog/blog3.png" alt="">
+                      </div>
+                      <div class="col-md-6 p-3 blog-item">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                          <h5 class="card-title">7 typography tips</h5>
+                          <h5 class="card-title">for interface design</h5>
+                          <small class="card-text">By<span> Jeremiah Lam</span></small>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 blog d-flex">
-                <img src="image/blog/blog4.png" alt="">
-                <div class="blog-item flex-column d-flex justify-content-center">
-                    <h4>Your logo is</h4>
-                    <h4>copied</h4>
-                    <p>By<span> Ferdinand Vogler</span></p>
+
+
+            <div class="col-md-6 "> 
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-6">
+                        <img class="card-img" src="image/blog/blog4.png" alt="">
+                      </div>
+                      <div class="col-md-6 p-3 blog-item">
+                        <div class="card-body d-flex flex-column justify-content-center">
+                          <h5 class="card-title">Your logo is</h5>
+                          <h5 class="card-title">copied</h5>
+                          <small class="card-text">By<span> Ferdinand Vogler</span></small>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
+
+    <!-- Latest Course -->
+
+
     <section class="container">
         <h3 class="title">Latest Course</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col ll">
+            <div class="col ">
                 <div class="card h-100 p-3">
                     <img src="image/group/group1.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -130,7 +170,7 @@
                                 <img src="icon/blank-star.png" alt="">
                                 <span>4.5</span>
                             </div>
-                            <div class="div2 col-md-6">
+                            <div class="div2 col-md-4">
                                 <img src="icon/time.png" alt="">
                                 <span>01:30 hr</span>
                             </div>
@@ -138,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col ll">
+            <div class="col ">
                 <div class="card h-100 p-3">
                     <img src="image/group/group2.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -156,7 +196,7 @@
                                 <img src="icon/blank-star.png" alt="">
                                 <span>4.3</span>
                             </div>
-                            <div class="div2 col-md-6">
+                            <div class="div2 col-md-4">
                                 <img src="icon/time.png" alt="">
                                 <span>01:30 hr</span>
                             </div>
@@ -164,7 +204,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col ll">
+            <div class="col ">
                 <div class="card h-100 p-3">
                     <img src="image/group/group3.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -173,7 +213,7 @@
                         <p class="card-text">Reed Krakoff.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="row d-flex justify-content-between">
+                        <div class="row justify-content-between">
                             <div class="div1 col-md-6">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
@@ -182,7 +222,7 @@
                                 <img src="icon/blank-star.png" alt="">
                                 <span>4.5</span>
                             </div>
-                            <div class="div2 col-md-6">
+                            <div class="div2 col-md-4">
                                 <img src="icon/time.png" alt="">
                                 <span>01:30 hr</span>
                             </div>
@@ -193,7 +233,10 @@
         </div>
     </section>
 
-
+    
+    <footer>
+        <small>&copy;Copyright 2021 AR Nasim.All rights reserved.</small>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
