--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="line"></div>
         <h3 class="title">Top Blog</h3>
         <div class="row">
-            <div class="col-md-6 "> 
+            <div class="col-lg-6 col-sm-12"> 
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-6">
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 "> 
+            <div class="col-lg-6 col-sm-12"> 
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-6">
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 "> 
+            <div class="col-lg-6 col-sm-12"> 
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-6">
@@ -126,7 +126,7 @@
             </div>
 
 
-            <div class="col-md-6 "> 
+            <div class="col-lg-6 col-sm-12"> 
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-6">
@@ -162,7 +162,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="row d-flex justify-content-between">
-                            <div class="div1 col-md-6">
+                            <div class="div1 col-lg-6">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
@@ -170,7 +170,7 @@
                                 <img src="icon/blank-star.png" alt="">
                                 <span>4.5</span>
                             </div>
-                            <div class="div2 col-md-4">
+                            <div class="div2 col-lg-4">
                                 <img src="icon/time.png" alt="">
                                 <span>01:30 hr</span>
                             </div>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="row d-flex justify-content-between">
-                            <div class="div1 col-md-6">
+                            <div class="div1 col-lg-6">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
@@ -196,7 +196,7 @@
                                 <img src="icon/blank-star.png" alt="">
                                 <span>4.3</span>
                             </div>
-                            <div class="div2 col-md-4">
+                            <div class="div2 col-lg-4">
                                 <img src="icon/time.png" alt="">
                                 <span>01:30 hr</span>
                             </div>
@@ -214,7 +214,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="row justify-content-between">
-                            <div class="div1 col-md-6">
+                            <div class="div1 col-lg-6">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
                                 <img src="icon/star.png" alt="">
@@ -222,7 +222,7 @@
                                 <img src="icon/blank-star.png" alt="">
                                 <span>4.5</span>
                             </div>
-                            <div class="div2 col-md-4">
+                            <div class="div2 col-lg-4">
                                 <img src="icon/time.png" alt="">
                                 <span>01:30 hr</span>
                             </div>
